fix mobile dark mode

--- a/_sass/git-wiki-style.scss
+++ b/_sass/git-wiki-style.scss
@@ -136,7 +136,7 @@ img {
   background-color: white;
   width: 100%;
   border-bottom: 1px solid;
-  z-index: 999;
+  z-index: 499;
 }
 
 #git-wiki-sidebar {
